--- a/app/styles.css
+++ b/app/styles.css
@@ -27,6 +27,7 @@ input {
   height: 100dvh;
   /* image-rendering: pixelated; */
   touch-action: none;
+  user-select: none;
   width: 100vw;
   width: 100dvw;
 }
